# LabSimulator2019

./: CMakeLists.txt
src/: CMakeLists.txt  LabContainer.cpp  LabContainer.h  MainWindow.cpp  MainWindow.h  lab.ui  main.qrc  main.ui
src/common/: CMakeLists.txt  LabModel.cpp  LabModel.h  LabPluginBase.h  LabRootWidget.cpp  LabRootWidget.h  symbols_export.h
src/labs/: CMakeLists.txt
src/labs/lab3/: CMakeLists.txt  Grid.cpp  Grid.h  Lab3Model.cpp  Lab3Model.h  Lab3Plugin.cpp  Lab3Plugin.h  Lab3RootWidget.cpp  Lab3RootWidget.h  Lab3View.cpp  Lab3View.h  Ldb3Model.cpp  Ldb3Model.h  Ldb3View.cpp  Ldb3View.h  lab3.ui
src/labs/lab3/commands/: AddMeasurementCommand.cpp  AddMeasurementCommand.h
src/labs/lab6/: CMakeLists.txt  Lab6Model.cpp  Lab6Model.h  Lab6Plugin.cpp  Lab6Plugin.h  Lab6RootWidget.cpp  Lab6RootWidget.h  lab6.ui
src/labs/lab8/: CMakeLists.txt  Lab8Model.cpp  Lab8Model.h  Lab8Plugin.cpp  Lab8Plugin.h  Lab8RootWidget.cpp  Lab8RootWidget.h  lab8.ui
